objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Parent_Account__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Project_Summary__c</fullName>
        <label>Internal Project Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Private_Attachments_ID__c</fullName>
        <description>Contains ID of Content Document marked as Private</description>
        <label>Private Attachments ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Email_Alias__c</fullName>
        <label>Project Email Alias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_External_Email_Alias__c</fullName>
        <description>Comma separated list of email addresses to notify for case creation and all customer visible notes (answer customer) for cases related to this project.</description>
        <label>Project External Email Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Custom Project name field</description>
        <label>Project Name Obsolete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_internal_email_alias__c</fullName>
        <description>Comma separated list of email addresses to notify for case creation and all customer visible notes (answer customer) for cases related to this project.</description>
        <label>Project internal email alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public_Attachments_ID__c</fullName>
        <description>Contains Public Attachments Id.</description>
        <label>Public Attachments ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Comma_separate_External_emailId</fullName>
        <active>true</active>
        <description>For external alias, we could not add emails as csv</description>
        <errorConditionFormula>if( CONTAINS(Project_External_Email_Alias__c, &apos;,&apos; ), true, false )</errorConditionFormula>
        <errorDisplayField>Project_External_Email_Alias__c</errorDisplayField>
        <errorMessage>Please provide valid email addresses separated by semicolon, e.g. email@domain.com;email2@domain2.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comma_separate_InternaemailId_no_allowed</fullName>
        <active>true</active>
        <description>For internal alias, we could not add emails as csv</description>
        <errorConditionFormula>if( CONTAINS(Project_internal_email_alias__c, &apos;,&apos; ), true, false )</errorConditionFormula>
        <errorDisplayField>Project_internal_email_alias__c</errorDisplayField>
        <errorMessage>Please provide valid email addresses separated by semicolon, e.g. email@domain.com;email2@domain2.com</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Name_must_be_Unique</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$Profile.Name &lt;&gt; &quot;5_1 - Data Steward&quot;,
	$User.LastName &lt;&gt; &apos;Migration&apos;,
        $User.LastName &lt;&gt; &apos;Code Migration&apos;,
	NOT($Profile.Name = &apos;Integration&apos;),
	AND(
		VLOOKUP($ObjectType.Project__c.Fields.Name,  
		$ObjectType.Project__c.Fields.Name , Name)  =  Name     
	),
	OR(
		ISNEW(),
		ISCHANGED(Name)
	)  
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Project Name must be unique.</errorMessage>
    </validationRules>
</CustomObject>